# jupyter_kernel_client

./: .pre-commit-config.yaml  README.md  RELEASE.md  conftest.py  pyproject.toml
jupyter_kernel_client/: __init__.py  client.py
tests/: test_client.py
