[build-system]
requires = ["hatchling", ]
build-backend = "hatchling.build"

[project]
name = "jupyter_kernel_client"
description = "jupyter kernel websocket client"
keywords = ["jupyter", "server", "kernel", "websocket", "client", ]
requires-python = ">=3.7"
dependencies = [
    "aiohttp",
    "nbformat"
]
dynamic = ["version", ]

[project.optional-dependencies]
test = [
    "mypy",
    "types-setuptools",
    "pytest",
    "pytest-asyncio",
    "pytest-env",
    "requests",
    "websockets",
    "ipykernel",
    "pytest-asyncio",
    "jupyter_server[test]>=2.0.0a0"
]


[[project.authors]]
name = "Wh1isper"
email = "9573586@qq.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Source = "https://github.com/Wh1isper/jupyter_kernel_client"

[tool.check-manifest]
ignore = [".*", ]

[tool.hatch.version]
path = "jupyter_kernel_client/__init__.py"
